# saatja/api/task.py
@@ -2,7 +2,13 @@ from http import HTTPStatus
 
 from fastapi import APIRouter, Depends, Response
 
-from saatja.api.models import CreateTask
+from saatja.api.models import (
+    CreateTask,
+    CreateTaskResponse,
+    GetTaskResponse,
+    GetTaskErrorResponse,
+)
+from saatja.db.task import ScheduledTask
 from saatja.request_dependencies import verified_api_key
 
 task_router = APIRouter()
@@ -13,16 +19,21 @@ task_router = APIRouter()
     summary="Create a task",
     description="Register a task to call a webhook at a given time",
     status_code=HTTPStatus.CREATED,
+    response_model=CreateTaskResponse,
     dependencies=(Depends(verified_api_key),),
 )
 def create_task(data: CreateTask):
-    pass
+    task = ScheduledTask(**data.dict())
+    task.save()
+
+    return CreateTaskResponse(id=task.id)
 
 
 @task_router.get(
     "/{task_id}",
     summary="Read a task",
-    description="Check the status of the task based on the task ID received when creating the task",
+    response_model=GetTaskResponse,
+    description="NOT IMPLEMENTED. Check the status of the task based on the task ID received when creating the task",
     dependencies=(Depends(verified_api_key),),
 )
 def get_task(task_id: str):
@@ -32,7 +43,8 @@ def get_task(task_id: str):
 @task_router.get(
     "/{task_id}/errors/{attempted_delivery}",
     summary="Explain error in webhook delivery attempt",
-    description="If reading a task shows errors, you can use this to check the specifics of the failure to help with debugging",
+    response_model=GetTaskErrorResponse,
+    description="NOT IMPLEMENTED. If reading a task shows errors, you can use this to check the specifics of the failure to help with debugging",
     dependencies=(Depends(verified_api_key),),
 )
 def get_task_error(task_id: str, attempted_delivery: str):
@@ -44,7 +56,7 @@ def get_task_error(task_id: str, attempted_delivery: str):
     summary="Delete a task",
     status_code=HTTPStatus.NO_CONTENT,
     response_class=Response,
-    description="You can delete tasks before they are executed to abort or reschedule their delivery for another time",
+    description="NOT IMPLEMENTED. You can delete tasks before they are executed to abort or reschedule their delivery for another time",
     dependencies=(Depends(verified_api_key),),
 )
 def delete_task(task_id: str):
